Inclined Plane AR - Added on main page

--- a/projects/inclined-plane.html
+++ b/projects/inclined-plane.html
@@ -83,11 +83,11 @@
                 </a>
             </div>
 
-            <!--
+            
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/platonic-solids-application-AR.html" target="_" style="text-decoration: none;">
+                <a href="./src/inclined-plane-application-AR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Platonic-Solids/blur-AR.jpg') center;">
+                        style="background: url('img/Inclined-Plane/blur-AR.png') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />Augmented Reality
@@ -102,7 +102,7 @@
                     download).
                 </p>
             </div>
-            -->
+            
 
         </div>
 
