--- a/projects/inclined-plane.html
+++ b/projects/inclined-plane.html
@@ -106,7 +106,7 @@
 
         </div>
 
-        <!-- End of more modes 
+        <!-- End of more modes -->
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Images in Augmented Reality</h3>
@@ -114,10 +114,10 @@
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="./img/Platonic-Solids/screenshot1-AR.png" onclick="openModal(1)">
-            <img class="slide " src="./img/Platonic-Solids/screenshot2-AR.png" onclick="openModal(2)">
-            <img class="slide " src="./img/Platonic-Solids/screenshot3-AR.png " onclick="openModal(3)">
-            <img class="slide " src="./img/Platonic-Solids/screenshot4-AR.png" onclick="openModal(4)">
+            <img class="slide " src="./img/Inclined-Plane/screenshot1-AR.png" onclick="openModal(1)"
+            style="height: 100%; border:1px solid black">
+            <img class="slide " src="./img/Inclined-Plane/screenshot2-AR.png" onclick="openModal(2)"
+            style="height: 100%; border:1px solid black">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs(-1) ">&#10094;</button>
@@ -126,25 +126,18 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot1-AR.png"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot2-AR.png"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot3-AR.png"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot4-AR.png"
-                    style="height: 100%;">
-
+                <img class="slide-modal-2 w3-display-middle" src="./img/Inclined-Plane/screenshot1-AR.png"
+                style="height: 100%; border:1px solid black">
+                <img class="slide-modal-2 w3-display-middle" src="./img/Inclined-Plane/screenshot2-AR.png"
+                style="height: 100%; border:1px solid black">
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
 
             <span
                 class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
-                onclick="closeModal()" style="cursor:pointer">×</span>
+                onclick="closeModal2()" style="cursor:pointer">×</span>
         </div>
-
-        -->
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
