--- a/index.html
+++ b/index.html
@@ -127,114 +127,115 @@
                 <a href="projects/inclined-plane.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Inclined Plane</div>
-                        <img src="img/inclined-plane/inclined-plane.png" alt="aiplane droping crate"
+                        <img src="img/inclined-plane/inclined-plane.png" alt="box sliding on a inclined plane"
                             style="width:100%;">
                     </div>
                 </a>
             </div>
-        </div>
 
-        <!-- About Section -->
-        <div class="w3-container w3-padding-32" id="about" style="text-align:justify;">
-            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-            <p>Welcome! On this site we will provide links to popular Virtual Reality and Augmented Reality systems and
-                projects developed by students from the UFJF computer science course. Feel free to contact us to suggest
-                improvements and enjoy the content!
-            </p>
-        </div>
-
-        <div class="w3-row-padding w3-grayscale">
-            <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
-                <img src="img/vrtools_rodrigo.jpg" alt="Rodrigo Silva" style="width:100%">
-                <h3>Rodrigo L. S. Silva</h3>
-                <p class="w3-opacity">Coordinator</p>
-                <p>Project coordinator and associate professor at UFJF. His main interests are Augmented Reality,
-                    Virtual Reality, Scientific Visualization and Computer Graphics.</p>
-                <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6878718102770367"
-                        target="_blank">More info</a></p>
+            <!-- About Section -->
+            <div class="w3-container w3-padding-32" id="about" style="text-align:justify;">
+                <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+                <p>Welcome! On this site we will provide links to popular Virtual Reality and Augmented Reality systems
+                    and
+                    projects developed by students from the UFJF computer science course. Feel free to contact us to
+                    suggest
+                    improvements and enjoy the content!
+                </p>
             </div>
-            <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
-                <img src="img/vrtools_lucas.jpg" alt="Lucas da Costa" style="width:100%">
-                <h3>Lucas D. da Costa</h3>
-                <p class="w3-opacity">Developer</p>
-                <p>Graduated in Exact Sciences at UFJF (2014-2019). Computer Science student at UFJF. Currently
-                    interested in Virtual Reality, Augmented Reality and Computer Graphics.</p>
-                <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6745472257202199"
-                        target="_">More info</a></p>
+
+            <div class="w3-row-padding w3-grayscale">
+                <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
+                    <img src="img/vrtools_rodrigo.jpg" alt="Rodrigo Silva" style="width:100%">
+                    <h3>Rodrigo L. S. Silva</h3>
+                    <p class="w3-opacity">Coordinator</p>
+                    <p>Project coordinator and associate professor at UFJF. His main interests are Augmented Reality,
+                        Virtual Reality, Scientific Visualization and Computer Graphics.</p>
+                    <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6878718102770367"
+                            target="_blank">More info</a></p>
+                </div>
+                <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
+                    <img src="img/vrtools_lucas.jpg" alt="Lucas da Costa" style="width:100%">
+                    <h3>Lucas D. da Costa</h3>
+                    <p class="w3-opacity">Developer</p>
+                    <p>Graduated in Exact Sciences at UFJF (2014-2019). Computer Science student at UFJF. Currently
+                        interested in Virtual Reality, Augmented Reality and Computer Graphics.</p>
+                    <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6745472257202199"
+                            target="_">More info</a></p>
+                </div>
+                <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
+                    <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
+                    <h3>Paulo Victor de M. Rozatto</h3>
+                    <p class="w3-opacity">Developer</p>
+                    <p>Computer Science student at UFJF. He loves coffe and science in general. Currently interested in
+                        Augmented Reality, Virtual Reality, and Computer Graphics.</p>
+                    <p><a class="w3-button w3-light-grey w3-block" href="https://github.com/Paulo-Rozatto"
+                            target="_blank">More info</a></p>
+                </div>
             </div>
-            <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
-                <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
-                <h3>Paulo Victor de M. Rozatto</h3>
-                <p class="w3-opacity">Developer</p>
-                <p>Computer Science student at UFJF. He loves coffe and science in general. Currently interested in
-                    Augmented Reality, Virtual Reality, and Computer Graphics.</p>
-                <p><a class="w3-button w3-light-grey w3-block" href="https://github.com/Paulo-Rozatto"
-                        target="_blank">More info</a></p>
-            </div>
-        </div>
 
-        <!-- Contact Section -->
-        <div class="w3-container w3-padding-32" id="contact">
-            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-            <p>Lets get in touch and talk about your next project.</p>
-            <form name="gform" id="gform"
-                action="https://docs.google.com/forms/d/e/1FAIpQLScT0oKS0BJ2vBWH5zVIlBgfFiZG9bgcDiuPka5jAZVDkFW8hw/formResponse?"
-                target="hidden_iframe" onsubmit="showModal()">
-                <input class="w3-input w3-border" type="text" placeholder="Name" required name="entry.107470474"
-                    id="entry.107470474">
-                <input class="w3-input w3-section w3-border" type="email" placeholder="Email" required
-                    name="entry.1094368542" id="entry.1094368542">
-                <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required
-                    name="entry.846857464" id="entry.846857464">
-                <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required
-                    name="entry.1607362201" id="entry.1607362201">
-                <button class="w3-button w3-black w3-section" type="submit" onclick="submitForm()">
-                    <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                </button>
-            </form>
+            <!-- Contact Section -->
+            <div class="w3-container w3-padding-32" id="contact">
+                <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
+                <p>Lets get in touch and talk about your next project.</p>
+                <form name="gform" id="gform"
+                    action="https://docs.google.com/forms/d/e/1FAIpQLScT0oKS0BJ2vBWH5zVIlBgfFiZG9bgcDiuPka5jAZVDkFW8hw/formResponse?"
+                    target="hidden_iframe" onsubmit="showModal()">
+                    <input class="w3-input w3-border" type="text" placeholder="Name" required name="entry.107470474"
+                        id="entry.107470474">
+                    <input class="w3-input w3-section w3-border" type="email" placeholder="Email" required
+                        name="entry.1094368542" id="entry.1094368542">
+                    <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required
+                        name="entry.846857464" id="entry.846857464">
+                    <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required
+                        name="entry.1607362201" id="entry.1607362201">
+                    <button class="w3-button w3-black w3-section" type="submit" onclick="submitForm()">
+                        <i class="fa fa-paper-plane"></i> SEND MESSAGE
+                    </button>
+                </form>
 
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="resetForm()"></iframe>
+                <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="resetForm()"></iframe>
 
-            <div id="modal" class="w3-modal">
-                <div class="w3-modal-content">
-                    <div class="w3-container w3-blue">
-                        <span onclick="document.getElementById('modal').style.display='none'"
-                            class="w3-button w3-display-topright">&times;</span>
-                        <h3>Contact</h3>
-                    </div>
-                    <div class="w3-container">
-                        <br>
-                        <p>Your message was sent!</p>
-                        <br>
+                <div id="modal" class="w3-modal">
+                    <div class="w3-modal-content">
+                        <div class="w3-container w3-blue">
+                            <span onclick="document.getElementById('modal').style.display='none'"
+                                class="w3-button w3-display-topright">&times;</span>
+                            <h3>Contact</h3>
+                        </div>
+                        <div class="w3-container">
+                            <br>
+                            <p>Your message was sent!</p>
+                            <br>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <!-- End page content -->
         </div>
 
-        <!-- End page content -->
-    </div>
 
+        <!-- Footer -->
+        <footer class="w3-center w3-black w3-padding-16">
+            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
+                    class="w3-hover-text-green">w3.css</a></p>
+        </footer>
 
-    <!-- Footer -->
-    <footer class="w3-center w3-black w3-padding-16">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                class="w3-hover-text-green">w3.css</a></p>
-    </footer>
+        <script>
+            function submitForm() {
+                document.getElementById("gform").submit()
+            }
 
-    <script>
-        function submitForm() {
-            document.getElementById("gform").submit()
-        }
+            function resetForm() {
+                document.getElementById("gform").reset()
 
-        function resetForm() {
-            document.getElementById("gform").reset()
+            }
 
-        }
-
-        function showModal() {
-            document.getElementById("modal").style.display = "block"
-        }
-    </script>
+            function showModal() {
+                document.getElementById("modal").style.display = "block"
+            }
+        </script>
 
 </body>
 
