--- a/projects/src/inclined-plane-application.html
+++ b/projects/src/inclined-plane-application.html
@@ -168,7 +168,7 @@
 
         function onResizePanels() {
             informations.style.left = "5%";
-            informations.style.top = "5%";
+            informations.style.top = "50px";
 
             if(window.innerHeight < 500){           // Horizontal screen mobile
                 informations.style.width = "90%";
