--- a/projects/src/health-awareness-application.html
+++ b/projects/src/health-awareness-application.html
@@ -68,6 +68,10 @@
             color: #736767;
         }
 
+        #toggleHighlight {
+            margin-top: 10px;
+        }
+
         @media only screen and (min-width: 768px) {
             #panel {
                 position: absolute;
@@ -150,6 +154,10 @@
                 <option value="stenosis">Stenosis</option>
                 <option value="thrombus">Thrombus</option>
             </select>
+
+            <input type="checkbox" id="toggleHighlight" name="toggleHighlight" value="toggleHighlight" checked
+                onchange="toggleHighlight()">
+            <label for="toggleHighlight"> Toggle Highlight</label>
 
             <p id="whatis">
                 Cardiovascular diseases (CVDs) are a group of disorders of the heart and vessels, such as coronary heart
