--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Heath Awareness</title>
+    <title>Vascular Diseases</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
@@ -29,7 +29,7 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Health Awareness</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Vascular Diseases</h1>
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
@@ -45,7 +45,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="src/health-awareness-application.html" height="530"
+            <iframe id="scene" class="w3-col l8" src="src/vascular-diseases-application.html" height="530"
                 style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
@@ -90,19 +90,19 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div> -->
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/projectile-motion-application-VR.html" target="_" style="text-decoration: none;">
+                <a href="./src/vascular-diseases-application-VR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
+                        style="background: url('img/Vascular-Disieses/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Virtual Reality
                         </div>
                     </div>
                 </a>
-            </div> -->
+            </div>
 
         </div>
 
