--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -33,11 +33,10 @@
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quia eos in magnam voluptates inventore
-                expedita consequatur soluta et labore eum atque qui rerum sed ea assumenda eius, cum beatae.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, repellendus explicabo delectus iusto
-                dolores blanditiis veritatis, excepturi porro officia laudantium dolor voluptates enim voluptatum!
-                Voluptatem, quis repellat! Veritatis, nisi commodi.</p>
+            <p>The vascular diseases are  a class of diseases of  the blood vessels – the arteries and veins of the circulatory system. 
+            There are several types of those diseases and they can affect almost any part of the body. 
+            Stroke, aneurysm, and deep vein thrombosis are some of the most common vascular diseases and their signs and symptoms vary from each type to another. 
+            The vascular diseases commonly occurs at sites of turbulent blood flow, such as the arteries when the blood flow changes direction abruptly.</p>
         </div>
 
         <div class="w3-container w3-row ">
