border, gap, and update on vr-interface

--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
                 </a>
             </div>
 
+            <!-- <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="projects/vascular-diseases.html">
+                    <div class="w3-display-container" style="border:2px solid black">
+                        <div class="project-title w3-display-topleft w3-padding">Vascular Diseases</div>
+                        <img src="img/vascular-diseases/vascular-diseases.jpg"
+                            alt="brain vessels inside the skull just before a stroke" style="width:100%;">
+                    </div>
+                </a>
+            </div> -->
+
             <!-- About Section -->
             <div class="w3-container w3-padding-32" id="about" style="text-align:justify;">
                 <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
