--- a/projects/src/vascular-diseases-application-VR.html
+++ b/projects/src/vascular-diseases-application-VR.html
@@ -109,7 +109,9 @@
             </a-entity>
         </a-entity>
 
-        <a-entity vr-interface="position: -1 0 0; dimension: 5 1; centralize: true;" config></a-entity>
+        <a-entity
+            vr-interface="dimension: 5 1; rotation: 80; position: -0.9 0 -0.1; transparency: true; gap: 0.01 0.01; border: 2 rgb(0,0,3); raycaster: 0 1; centralize: true;"
+            config></a-entity>
 
     </a-scene>
 </body>
