added andre's picture

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
 
             <div class="w3-row-padding w3-grayscale">
-                <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
+                <div class="w3-col l3 m6 w3-margin-bottom" style="text-align:justify;">
                     <img src="img/vrtools_rodrigo.jpg" alt="Rodrigo Silva" style="width:100%">
                     <h3>Rodrigo L. S. Silva</h3>
                     <p class="w3-opacity">Coordinator</p>
@@ -164,7 +164,7 @@
                     <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6878718102770367"
                             target="_blank">More info</a></p>
                 </div>
-                <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
+                <div class="w3-col l3 m6 w3-margin-bottom" style="text-align:justify;">
                     <img src="img/vrtools_lucas.jpg" alt="Lucas da Costa" style="width:100%">
                     <h3>Lucas D. da Costa</h3>
                     <p class="w3-opacity">Developer</p>
@@ -173,13 +173,22 @@
                     <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6745472257202199"
                             target="_">More info</a></p>
                 </div>
-                <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
+                <div class="w3-col l3 m6 w3-margin-bottom" style="text-align:justify;">
                     <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
                     <h3>Paulo Victor de M. Rozatto</h3>
                     <p class="w3-opacity">Developer</p>
                     <p>Computer Science student at UFJF. He loves coffe and science in general. Currently interested in
                         Augmented Reality, Virtual Reality, and Computer Graphics.</p>
                     <p><a class="w3-button w3-light-grey w3-block" href="https://github.com/Paulo-Rozatto"
+                            target="_blank">More info</a></p>
+                </div>
+                <div class="w3-col l3 m6 w3-margin-bottom" style="text-align:justify;">
+                    <img src="img/vrtools_andre.jpg" alt="André Oliveira" style="width:100%">
+                    <h3>André Luiz C. de Oliveira</h3>
+                    <p class="w3-opacity">Developer</p>
+                    <p>Computer Science student at UFJF. He loves everything about science and technology. He Currently
+                        interested in Virtual Reality, Augmented Reality and Computer Graphics.</p>
+                    <p><a class="w3-button w3-light-grey w3-block" href="https://github.com/andrelcol"
                             target="_blank">More info</a></p>
                 </div>
             </div>
