lookclose and resetcam buttons size fixed

--- a/projects/src/vascular-diseases-application.html
+++ b/projects/src/vascular-diseases-application.html
@@ -71,15 +71,17 @@
         #toggleHighlight {
             margin-top: 10px;
         }
-        
+
         #LookClose {
             margin-top: 10px;
-            width: 65%;
+            width: 50%;
+            display: block;
         }
 
-        #ResetCamera{
+        #ResetCamera {
             margin-top: 10px;
-            width: 65%;
+            width: 50%;
+            display: block;
         }
 
         @media only screen and (min-width: 768px) {
