--- a/projects/inclined-plane.html
+++ b/projects/inclined-plane.html
@@ -34,10 +34,13 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                This is a typical high school physics exercise. It involves a real situation of sliding of a block on an inclined plane and focuses on analyzing how the forces act on it in this scenario.
+                This is a typical high school physics exercise. It involves a real situation of sliding of a block on an
+                inclined plane and focuses on analyzing how the forces act on it in this scenario.
                 It is usually guided by three basic forces: Weight, Normal and Friction.<br>
-                We have the decomposition of the Weight on the X axis and the Y axis. The Normal force will act in the opposite direction to the Weight in Y and the frictional 
-                force will be opposite to the weight in X, so the greater the frictional force, the less the block will move or remain stationary, however, otherwise, the block will 
+                We have the decomposition of the Weight on the X axis and the Y axis. The Normal force will act in the
+                opposite direction to the Weight in Y and the frictional
+                force will be opposite to the weight in X, so the greater the frictional force, the less the block will
+                move or remain stationary, however, otherwise, the block will
                 descend the inclined plane with greater or lesser speed depending on the frictional force.
                 The below application shows a simulation of this scenary with the forces diagram and the main equations.
 
@@ -83,7 +86,6 @@
                 </a>
             </div>
 
-            
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/inclined-plane-application-AR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
@@ -102,7 +104,18 @@
                     download).
                 </p>
             </div>
-            
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/inclined-plane-application-VR.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                        style="background: url('img/Inclined-Plane/blur.png') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />Virtual Reality
+                        </div>
+                    </div>
+                </a>
+            </div>
 
         </div>
 
@@ -115,9 +128,9 @@
         <div class="w3-content w3-display-container w3-center w3-row ">
 
             <img class="slide " src="./img/Inclined-Plane/screenshot1-AR.png" onclick="openModal(1)"
-            style="height: 100%; border:1px solid black">
+                style="height: 100%; border:1px solid black">
             <img class="slide " src="./img/Inclined-Plane/screenshot2-AR.png" onclick="openModal(2)"
-            style="height: 100%; border:1px solid black">
+                style="height: 100%; border:1px solid black">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs(-1) ">&#10094;</button>
@@ -127,9 +140,9 @@
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Inclined-Plane/screenshot1-AR.png"
-                style="height: 100%; border:1px solid black">
+                    style="height: 100%; border:1px solid black">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Inclined-Plane/screenshot2-AR.png"
-                style="height: 100%; border:1px solid black">
+                    style="height: 100%; border:1px solid black">
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
@@ -142,9 +155,10 @@
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
             <p><i>Tom Henderson, "Inclined Planes." From The Physics Classroom.
-                https://www.physicsclassroom.com/class/vectors/Lesson-3/Inclined-Planes </i></p>
-            <p><i>The Editors of Encyclopaedia Britannica, "Inclined Plane" From Encyclopædia Britannica, inc. Web resource
-                https://www.britannica.com/technology/inclined-plane</i></p>
+                    https://www.physicsclassroom.com/class/vectors/Lesson-3/Inclined-Planes </i></p>
+            <p><i>The Editors of Encyclopaedia Britannica, "Inclined Plane" From Encyclopædia Britannica, inc. Web
+                    resource
+                    https://www.britannica.com/technology/inclined-plane</i></p>
         </div>
 
         <!-- End page content -->
