VR option inclued to platonics solids project and aneurism model changed

--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -80,7 +80,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/platonic-solids-application.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Platonic-Solids/blur.jpg') center;">
+                         style="background: url('img/Platonic-Solids/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen
@@ -92,7 +92,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/platonic-solids-application-AR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Platonic-Solids/blur-AR.jpg') center;">
+                         style="background: url('img/Platonic-Solids/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />Augmented Reality
@@ -103,9 +103,21 @@
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                     You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
-                        target="_blank">click here</a> to
+                                                                                       target="_blank">click here</a> to
                     download).
                 </p>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/platonic-solids-application-VR.html" target="_" style="text-decoration: none;">
+                    <div class="more-modes w3-display-container"
+                         style="background: url('img/Vascular-Disieses/blur.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/vr-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />Virtual Reality
+                        </div>
+                    </div>
+                </a>
             </div>
 
         </div>
