--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -36,7 +36,7 @@
                 this.models = document.querySelectorAll('.menu-model');
                 this.modelIndex = 0;
                 this.rotate = true;
-                
+                self.models[self.modelIndex].object3D.children[0].material.wireframe.color = '#000000';
                 vrInterface.addButton('next', '#next', () => {
                     self.models[self.modelIndex].object3D.visible = false;
 
@@ -90,7 +90,7 @@
                 });
 
                 vrInterface.addButton('wireframe', '#wireframe', () => {
-                    self.models[self.modelIndex].object3D.material.wireframe = !self.models[self.modelIndex].object3D.material.wireframe;
+                    self.models[self.modelIndex].object3D.children[0].material.wireframe = !self.models[self.modelIndex].object3D.children[0].material.wireframe;
                 });
 
                 document.addEventListener('pointerlockchange', (event) => {
@@ -120,7 +120,7 @@
 </head>
 
 <body>
-    <a-scene main_scene id="scene" background="color: #000000">
+    <a-scene main_scene id="scene" background="color: #323232">
         <a-assets timeout="3000">
 
             <img id="next" src="assets/icons/next.png">
@@ -132,8 +132,8 @@
         </a-assets>
 
 
-        <a-entity light="type:directional; castShadow:true;" position="1 1 1"></a-entity>
-        <a-entity light="color: #fff" position="25 30 20"></a-entity>
+        <a-entity light="type:directional" position="1 1 1"></a-entity>
+        <a-entity light="color: #fff; castShadow:true;" position="25 30 20"></a-entity>
 
         <a-entity id="tetrahedron" class="menu-model" geometry="primitive: tetrahedron; radius: 1" material="color:#ff0000"  position="0 1 -3" shadow="receive: true"
                   visible="true">
