vr icons changed

--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -126,9 +126,9 @@
             <img id="next" src="assets/icons/next.png">
             <img id="previous" src="assets/icons/previous.png">
             <img id="rotation" src="assets/icons/rotation.png">
-            <img id="increase" src="assets/icons/increase.jpg">
-            <img id="decrease" src="assets/icons/decrease.jpg">
-            <img id="wireframe" src="assets/icons/wireframe.jpg">
+            <img id="increase" src="assets/icons/increase.png">
+            <img id="decrease" src="assets/icons/decrease.png">
+            <img id="wireframe" src="assets/icons/wireframe.png">
         </a-assets>
 
 
